# akaze

./: CMakeLists.txt
src/: CMakeLists.txt  akaze_compare.cpp  akaze_features.cpp  akaze_match.cpp
src/gpu/: Descriptor.cu  FlowFilter.cu  GaussianFilter.cu  GeneralFilters.cu  ImageOperation.h  helper_cuda.h  helper_cuda_drvapi.h  helper_device_thread.h  helper_functions.h  helper_image.h
src/lib/: AKAZE.cpp  AKAZE.h  AKAZEConfig.h  nldiffusion_functions.cpp  nldiffusion_functions.h
